[project]
name = "reflexion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
]
